--- a/task.html
+++ b/task.html
@@ -13,6 +13,7 @@
         .food-item {
             width: 250px;
             border: 2px solid black;
+            background-color: lightblue;
 
         }
 
@@ -20,11 +21,13 @@
         .address {
             display: flex;
             gap: 50px;
+           
         }
 
         @media screen and (max-width:424px) {
             .food-items {
                 margin-bottom: 10px;
+            
             }
 
         }
@@ -65,7 +68,7 @@
     <div class="food-items">
         <div class="food-item">
             <img src="https://b.zmtcdn.com/data/pictures/2/21170172/f37dc70619f41d1b7ef4b2ca264c051e_featured_v2.jpg?output-format=webp"
-                width="250px">
+                width="250px" height="200px">
 
             <div class="fooditem1">
                 <h3>TASI CAFE</h3>
@@ -80,7 +83,7 @@
 
         <div class="food-item">
             <img src="https://b.zmtcdn.com/data/pictures/2/91752/5ebceba21547577b3f873b2ccdee32a6_featured_v2.jpg?output-format=webp"
-                width="250px">
+                width="250px" height="200px">
 
             <div class="fooditem1">
                 <h3>AISH-THE PARK</h3>
@@ -95,7 +98,7 @@
 
         <div class="food-item">
             <img src="https://b.zmtcdn.com/data/pictures/chains/7/91727/eaf07eb37f8f2aeb55107abf7f9f5cfc_featured_v2.jpg?output-format=webp"
-                width="250px">
+                width="250px" height="200px">
 
             <div class="fooditem1">
                 <h3>verandah-THE PARK</h3>
@@ -110,7 +113,7 @@
 
         <div class="food-item">
             <img src="https://b.zmtcdn.com/data/pictures/0/21058610/c1f9c05e9b0402a1eaeac91de3db3834_featured_v2.jpg?output-format=webp"
-                width="250px">
+                width="250px" height="200px">
 
             <div class="fooditem1">
                 <h3>HABITAT-CAFE</h3>
